testdata/baselines/reference/submodule/compiler/dynamicRequire.errors.txt
a.js(2,13): error TS2580: Cannot find name 'require'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.


==== a.js (1 errors) ====
    function foo(name) {
        var s = require("t/" + name)
                ~~~~~~~
!!! error TS2580: Cannot find name 'require'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
    }
    